--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "twig/twig": "~1.15",
     "symfony/console": "~2.5|~3.0",
     "symfony/config": "~2.4|~3.0",
-    "symfony/yaml": "~2.4|~3.0",
+    "symfony/yaml": "^3.1",
     "symfony/dependency-injection": "~2.4|~3.0"
   },
   "require-dev": {
