--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "symfony/console": "~2.5|~3.0",
     "symfony/config": "~2.4|~3.0",
     "symfony/yaml": "^3.1",
-    "symfony/dependency-injection": "~2.4|~3.0"
+    "symfony/dependency-injection": "~2.4|~3.0",
+    "phpunit/php-code-coverage": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit":"*",
